[package]
name = "validator_lock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
blake3 = { version = "1.5", default-features = false, features = ["pure"] }




[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
skip-anchor-program = []
clippy-skip = []


